# skill-forge

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  ROADMAP.md  THIRD_PARTY_NOTICES.md  compose.yaml  pyproject.toml  recommended-skills.json  skill-manager  skill-manager.ps1  skill-manager.sh
.claude/agents/: commit.md  create-pr.md  create-skill.md  finalize-skill.md  install-manager-skill.md  update-skill.md
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: publish-image.yml  validate-skills.yml
TODO/: phase1.md  phase2.md  phase3.5.md  phase3.6.md  phase3.md  phase6.md  phase7.md
archive/: README.md
archive/phases/: phase1.md  phase3.5.md  phase4.md  phase5.md  phase6.md  phase7.md  phase8.md
canonical-configs/agent-guideline/: config.json  guideline.md
canonical-configs/agent-hooks/: config.json
canonical-configs/agent-memory/: config.json  memory.md
canonical-skills/: catalog.json
canonical-skills/commit/: instruction.md  package.json
docker/: runtime-entrypoint.sh  runtime-shellrc
docs/: release-guide.md
reviews/: README.md
scripts/: setup-hooks.sh
tests/: test_agent_hooks_bundle.py  test_claude_hooks.py  test_codex_hooks.py  test_decision_methods.py  test_define_project.py  test_hook_policy.py  test_managed_bundles.py  test_phase_c_workflow.py  test_phase_d_bootstrap.py  test_project_guard.py  test_project_lifecycle_routing.py  test_roadmap_phase_delivery.py  test_security_check.py  test_skill_forge.py  test_supervised_auto_workflow.py  test_toolkit.py
(+313 files in other folders)
