[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-toolkit"
version = "0.3.0"
description = "Canonical skill toolkit manager for Codex and Claude targets"
requires-python = ">=3.11"

[project.scripts]
skill-toolkit = "skill_toolkit.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
