[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-forge"
version = "1.1.2"
description = "Canonical skill-forge CLI for Codex and Claude targets"
requires-python = ">=3.11"

[project.scripts]
skill-forge = "skill_forge.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
